--- a/src/popup.html
+++ b/src/popup.html
@@ -5,199 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookmark Finder - Your Private Search Engine of Your Bookmarked Pages</title>
+    <link rel="stylesheet" href="./css/popup.css">
     <script src="popup.js"></script>
-    <style>
-        body,
-        html {
-            height: 100%;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            width: 640px;
-            height: 360px;
-            overflow: scroll;
-        }
-
-        .centered-content {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
-
-        .logo {
-            width: 410px;
-            height: 180px;
-        }
-
-        .search-bar-container {
-            margin: 0px auto 20px auto;
-        }
-
-        .search-bar {
-            width: 500px;
-            height: 24px;
-            padding: 10px 20px 10px 20px;
-            margin-bottom: 20px;
-            border: 1px solid #dcdcdc;
-            border-radius: 24px;
-            font-size: 16px;
-        }
-
-        .search-button {
-            padding: 10px 20px;
-            margin: 0 4px;
-            background-color: #f8f9fa;
-            border: 1px solid #f8f9fa;
-            border-radius: 4px;
-            color: #5f6368;
-            font-size: 14px;
-            cursor: pointer;
-            outline: none;
-            width: 128px;
-            transition: background-color 0.2s, box-shadow 0.2s, transform 0.2s;
-        }
-
-        .search-button:hover {
-            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-        }
-
-        .search-button:active {
-            background-color: #e8eaed;
-            transform: translateY(2px);
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-        }
-
-        .focus-button {
-            background-color: #03A6D6;
-            color: #ffffff;
-        }
-
-        .focus-button:active {
-            background-color: #014A64;
-            color: #ffffff;
-        }
-
-        .search-container {
-            padding: 20px 20px 0px 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .search-bar-wrapper {
-            display: flex;
-            align-items: center;
-            position: relative;
-            width: 600px;
-            height: 44px;
-        }
-
-        .search-logo {
-            height: 46px;
-            margin-right: 16px;
-            cursor: pointer;
-        }
-
-        .search-bar-on-rp {
-            flex-grow: 1;
-            height: 24px;
-            padding: 10px 20px 10px 20px;
-            border: 1px solid #dcdcdc;
-            border-radius: 22px;
-            font-size: 16px;
-            outline: none;
-        }
-
-        .search-button-on-rp {
-            position: absolute;
-            right: 1px;
-            top: 1px;
-            height: 42px;
-            border: none;
-            background-color: #f8f9fa;
-            border-radius: 0 22px 22px 0;
-            font-size: 16px;
-            cursor: pointer;
-            outline: none;
-            padding: 0 15px;
-            box-sizing: border-box;
-        }
-
-        .search-button-on-rp:hover {
-            background-color: #e8e8e8;
-        }
-
-        .search-results {
-            list-style-type: none;
-            padding: 0;
-            width: calc(100% - 40px);
-            margin: 20px auto;
-        }
-
-        .search-result {
-            background-color: #ffffff;
-            margin-bottom: 10px;
-            padding: 10px 20px 10px 20px;
-            border-bottom: 1px solid #dcdcdc;
-            /* border-radius: 8px; */
-            /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
-        }
-
-        .search-result:last-child {
-            border-bottom: 0px;
-        }
-
-        .search-result h3 {
-            margin: 0px 0px 3px 0px;
-            color: #545454;
-            font-weight: normal;
-            font-size: 20px;
-            line-height: 1.3;
-            text-overflow: ellipsis;
-            width: 100%;
-        }
-
-        .search-result h3 a {
-            text-decoration: none;
-            color: #1a0dab;
-            text-overflow: ellipsis;
-            display: block;
-            overflow: hidden;
-        }
-
-        .search-result h3 a:hover {
-            text-decoration: underline;
-        }
-
-        .search-result .url {
-            color: #03A6D6;
-            font-size: 14px;
-            line-height: 1.6;
-            font-style: normal;
-        }
-
-        .search-result .url a {
-            color: inherit;
-            text-overflow: ellipsis;
-            display: block;
-            overflow: hidden;
-        }
-
-        .search-result .snippet {
-            color: #545454;
-            font-size: 14px;
-            line-height: 1.6;
-            margin-block-start: 0.5em;
-            margin-block-end: 0.5em;
-            margin-inline-start: 0px;
-            margin-inline-end: 0px;
-        }
-
-        .result_page {
-            display: none;
-        }
-    </style>
 </head>
 
 <body>
