feat: add dark mode
Signed-off-by: Stephen L. <LRQ3000@gmail.com>

--- a/src/popup.html
+++ b/src/popup.html
@@ -19,6 +19,7 @@
         <input id="btn_reindex" type="submit" value="Reindex" class="search-button" />
         <input id="btn_query" type="submit" value="Search" class="search-button focus-button" />
         <input id="btn_reset" type="submit" value="Reset" class="search-button" />
+        <button id="dark_mode_toggle" class="search-button">&#9790; Dark Mode</button>
     </div>
 
     <div class="result_page">
