feat: add pruning, first implementation
Signed-off-by: Stephen L. <LRQ3000@gmail.com>

--- a/src/popup.html
+++ b/src/popup.html
@@ -15,9 +15,10 @@
         <img src="./img/banner.png" alt="Google Logo" class="logo" />
         <div class="search-bar-container">
             <input id="text_query" type="text" class="search-bar" />
+            <input id="btn_query" type="submit" value="Search" class="search-button focus-button" />
         </div>
         <input id="btn_reindex" type="submit" value="Reindex" class="search-button" />
-        <input id="btn_query" type="submit" value="Search" class="search-button focus-button" />
+        <input id="btn_prune" type="submit" value="Prune" class="search-button" />
         <input id="btn_reset" type="submit" value="Reset" class="search-button" />
         <button id="dark_mode_toggle" class="search-button">&#9790; Dark Mode</button>
     </div>
