feat: add dark mod for reindex and prune pages
Signed-off-by: Stephen L. <LRQ3000@gmail.com>

--- a/src/bm_pruner.html
+++ b/src/bm_pruner.html
@@ -7,6 +7,7 @@
   <title>Prune Bookmarks</title>
   <link rel="stylesheet" href="./css/bm_pruner.css">
   <script src="bm_pruner.js"></script>
+  <script src="./dark_mode_detector.js"></script>
 </head>
 
 <body>
