--- a/src/bm_indexer.html
+++ b/src/bm_indexer.html
@@ -7,6 +7,7 @@
   <title>Index Bookmarks</title>
   <link rel="stylesheet" href="./css/bm_indexer.css">
   <script src="bm_indexer.js"></script>
+  <script src="./dark_mode_detector.js"></script>
 </head>
 
 <body>
